@@ -1,3 +1,11 @@
+1996-07-04  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/unmap/unmap.c: used the wrong base for ^x
+
+1996-03-04  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/hex/hex.c: quick hack to show ECMA codes
+
 1995-12-15  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/unmap/unmap.c: RCS_BASE
